--- a/piggyvest.css
+++ b/piggyvest.css
@@ -72,6 +72,9 @@ body {
     background-color: white;
     padding: 15px ;
     line-height: 22px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
 .card p {
@@ -79,18 +82,45 @@ body {
     font-weight: bolder;
 
 }
+.card1 p, .text1 {
+    color: #0f60dc;
+}
+
+.card2 p, .text2 {
+    color: #0a89f4;
+}
+
+.card3 p, .text3 {
+    color: #39c277;
+}
+
+.card4 p, .text4 {
+    color: #e5489b;
+}
+
+.card5 p, .text5 {
+    color: #0c1825;
+}
+
+.card6 p, .text6 {
+    color: #ff783c;
+}
+
+.card:hover p, .card:hover .text1, .card:hover .text2, .card:hover .text3, .card:hover .text4, .card:hover .text5, .card:hover .text6 {
+    color: white;
+}
 .card1:hover {
-    background-color: blue;
+    background-color: #0f60dc;
     color: white;
 }
 
 .card2:hover {
-    background-color: #0a89f4;
+    background-color: #2295f2;
     color: white;
 }
 
 .card3:hover {
-    background-color: green;
+    background-color: #39c277;
     color: white;
 }
 
@@ -99,44 +129,48 @@ body {
     color: white;
 }
 .card5:hover {
-    background-color: black;
+    background-color: #0c1825;
     color: white;
 }
 
 .card6:hover {
-    background-color: orangered;
+    background-color: #ff783c;
     color: white;
 }
 
-.card-buttom {
+/* .card-buttom {
     display: flex;
     position: absolute;
     bottom: 6%;
-}
+} */
 
 .card-buttom img {
     height: 24px;
     width: 24px;
 }
 
-.card-buttom2 {
+/* .card-buttom2 {
     display: flex;
     position: absolute;
     bottom: -65%;
-}
+} */
 
 .card-buttom2 img {
     height: 24px;
     width: 24px;
 }
 
-.card-buttom3 {
+/* .card-buttom3 {
     display: flex;
     position: absolute;
     bottom: -138%;
-}
+} */
 
 .card-buttom3 img {
     height: 24px;
     width: 24px;
+}
+
+.card:hover .icon {
+    content: url(./image/subdirectory_arrow_right_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png);
 }
